# sysmon

./: .gitignore  .travis.yml  Makefile.am  README.rst  autobuild  configure.ac
src/: Makefile.am  job.cc  job.hh  logging.hh  monitor.cc  parser.cc  parser.hh  parser_test.cc  posix_signals.cc  posix_signals.hh  service.cc  service.hh  signal_lookup.cc
src/testdata/: docker.svc  fetchmail.job
