AC_PREREQ([2.68])
AC_INIT([sysmon],
	[1.0.0-RC1],
	[coder@kyleisom.net],
	[sysmon],
	[https://git.kyleisom.net/server/sysmon])
AM_INIT_AUTOMAKE([1.11 foreign])

AC_CONFIG_SRCDIR([src/parser.hh])
AC_CONFIG_FILES([Makefile src/Makefile])
AC_CONFIG_MACRO_DIR([m4])

AC_CHECK_HEADERS

AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_CC_C_O

AC_OUTPUT
